Fix spacing issues

--- a/themes/nica/assets/style/layout/_main.scss
+++ b/themes/nica/assets/style/layout/_main.scss
@@ -10,7 +10,7 @@ main {
 
   &> .content {
     padding: 0 1rem 2rem 1rem;
-    max-width: 750px;
+    max-width: 800px;
     word-wrap: break-word;
   }
 
