--- a/themes/nica/assets/style/pages/_portfolio.scss
+++ b/themes/nica/assets/style/pages/_portfolio.scss
@@ -18,11 +18,11 @@
   ul.categories {
     margin: 0;
     display: inline;
-    line-height: 1.5rem;
+    line-height: 2rem;
     margin-right: 5px;
     list-style: none;
     &>li {
-      display: inline;
+      display: inline-block;
       margin: 0;
       margin-right: 5px;
       &:last-child {
@@ -37,7 +37,7 @@
     border-style: solid;
     padding: 5px;
     border-radius: 5px;
-    font-size: .85rem;
+    font-size: .8rem;
     white-space: nowrap;
     transition: all .3s ease-in-out;
   }
@@ -148,7 +148,7 @@ main.section.portfolio {
   }
 
   .date {
-    font-size: .85rem;
+    font-size: .9rem;
   }
 
   a.tag,
@@ -208,7 +208,7 @@ main.page.portfolio {
 
   .date {
     display: block;
-    font-size: .85rem;
+    font-size: 1rem;
     margin-bottom: .5rem;
   }
 
